--- a/index.html
+++ b/index.html
@@ -303,23 +303,23 @@
     </div>
     <footer id="contact" class="p-16 py-5 bg-grey2">
         <h1 class="text-main text-[20px] font-bold mb-4">Hubungi Kami</h1>
-        <div class="flex flex-wrap justify-between column-gap-0 gap-5 text-[13px] contact-container">
-            <div class="w-[21%]">
+        <div class="grid md:flex md:flex-wrap justify-between column-gap-0 gap-5 text-[13px] contact-container">
+            <div class="md:w-[21%] w-full md:mb-0 mb-5 md:order-1 order-2">
                 <h3>Email</h3>
                 <a href="mailto:ptbptjm@gmail.com">ptbptjm@gmail.com</a>
             </div>
-            <div class="w-[21%]">
+            <div class="md:w-[21%] w-full md:mb-0 mb-5 md:order-2 order-3">
                 <h3>Whatsapp</h3>
                 <a href="tel:6289509512660">+62-895-0951-2660</a>
             </div>
-            <div class="w-[21%]">
+            <div class="md:w-[21%] w-full md:mb-0 mb-5 md:order-3 order-4">
                 <h3>Social Media</h3>
                 <div class="flex flex-col">
                     <a href="">Facebook</a>
                     <a href="">Instagram</a>
                 </div>
             </div>
-            <div class="w-[21%]">
+            <div class="md:w-[21%] w-full md:mb-0 mb-5 md:order-4 order-5">
                 <h3>Kantor Utama</h3>
                 <div class="flex flex-col">
                     <a href="">JI. Gunung Sari 5 H Surabaya 60242</a>
@@ -327,17 +327,17 @@
                     <a href="">Fax. (031) 5674991</a>
                 </div>
             </div>
-            <div class="w-[21%]">
+            <div class="md:w-[21%] w-full md:mb-0 mb-5 md:order-5 order-1">
                 <img src="./assets/img/logo/logo-bjpm.png" alt="" class=" aspect-square w-[70px]">
             </div>
-            <div class="w-[42%]">
+            <div class="w-[42%] md:order-6 order-7">
                 <h3>Client Kami</h3>
                 <div class="flex">
                     <img src="./assets/img/logo/client1.jpg" alt="" class="h-[70px]">
                     <img src="./assets/img/logo/client2.jpg" alt="" class="h-[70px]">
                 </div>
             </div>
-            <div class="w-[21%]">
+            <div class="md:w-[21%] w-full md:mb-0 mb-5 md:order-7 order-6 ">
                 <h3>Bengkel</h3>
                 <div class="flex flex-col">
                     <a href="">Jl. Raya Jetis Kupang KM. 08 Ds. Parengan Kec. Jetis Mojokerto</a>
