memperbarui section artikel

--- a/index.html
+++ b/index.html
@@ -252,34 +252,34 @@
         </section>
         <section id="article" class="p-10 px-5 text-white bg-main">
             <h1 class="text-[32px] mb-4">Artikel</h1>
-            <div class="justify-between block md:flex">
+            <div class="flex flex-wrap justify-between gap-3">
                 <div class="article-card" data-aos="zoom-in">
                     <img src="./assets/img/Blank.jpg" alt="">
-                    <div>
-                        <p>Penyedia Layanan Terbaik</p>
-                        <button>Baca Lebih</button>
-                    </div>
+                    <p class="flex flex-wrap bg-white">
+                        <span>Penyedia Layanan Terbaik</span>
+                        <button class="ms-auto">Baca Lebih</button>
+                    </p>
                 </div>
                 <div class="article-card" data-aos="zoom-in">
                     <img src="./assets/img/Blank.jpg" alt="">
-                    <div>
-                        <p>Penyedia Layanan Terbaik</p>
-                        <button>Baca Lebih</button>
-                    </div>
+                    <p class="flex flex-wrap bg-white">
+                        <span>Penyedia Layanan Terbaik</span>
+                        <button class="ms-auto">Baca Lebih</button>
+                    </p>
                 </div>
                 <div class="article-card" data-aos="zoom-in">
                     <img src="./assets/img/Blank.jpg" alt="">
-                    <div>
-                        <p>Penyedia Layanan Terbaik</p>
-                        <button>Baca Lebih</button>
-                    </div>
+                    <p class="flex flex-wrap bg-white">
+                        <span>Penyedia Layanan Terbaik</span>
+                        <button class="ms-auto">Baca Lebih</button>
+                    </p>
                 </div>
                 <div class="article-card" data-aos="zoom-in">
                     <img src="./assets/img/Blank.jpg" alt="">
-                    <div>
-                        <p>Penyedia Layanan Terbaik</p>
-                        <button>Baca Lebih</button>
-                    </div>
+                    <p class="flex flex-wrap bg-white">
+                        <span>Penyedia Layanan Terbaik</span>
+                        <button class="ms-auto">Baca Lebih</button>
+                    </p>
                 </div>
             </div>
         </section>
