--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="./assets/img/logo/logo-bjpm.png" alt="Logo BJPM" class="w-[70px] aspect-square">
                 </div>
                 <ul
-                    class="hidden sm:flex items-center grow justify-center gap-3 text-grey1 flex-wrap max-h-[24px] overflow-hidden max-w-[70%]">
+                    class="hidden sm:flex items-center grow justify-center gap-3 text-grey1 flex-wrap overflow-hidden max-w-[70%]">
                     <li>
                         <a href="#home">Home</a>
                     </li>
@@ -96,9 +96,8 @@
                 </div>
             </div>
         </header>
-        <section id="home" class="relative h-screen">
-            <swiper-container speed="500" pagination="true" pagination-type="progressbar" autoplay-delay="4000"
-                class="z-0 w-full h-full">
+        <section id="home" class="relative flex flex-col items-center h-screen">
+            <swiper-container speed="500" autoplay-delay="4000" class="z-0 w-full h-full">
                 <swiper-slide>
                     <img src="./assets/img/hero/1.jpg" alt="">
                 </swiper-slide>
@@ -149,6 +148,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div
+                class="absolute bottom-0 progress-bar w-[20%] min-w-[100px] bg-grey1 mx-auto h-[10px] mb-2 z-10 p-[2px]">
+                <div class="h-full progress bg-main"></div>
             </div>
         </section>
         <section id="about" class="flex flex-col items-center p-4 px-10 my-10 md:flex-row">
@@ -220,21 +223,6 @@
                 Selanjutnya
             </button>
         </section>
-        <!-- <section id="product">
-            <h1>product</h1>
-            <div>
-                <div></div>
-                <p>Horybeam</p>
-            </div>
-            <div>
-                <div></div>
-                <p>Horybeam</p>
-            </div>
-            <div>
-                <div></div>
-                <p>Horybeam</p>
-            </div>
-        </section> -->
         <section id="project" class="flex flex-col p-10">
             <h1 class="text-[32px] text-center text-white p-4 mb-4">Proyek Kami</h1>
             <div class="justify-between block mb-4 md:flex project-card-container">
