[add] effect transition

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PT. Bina Jaya Perkasa Mandiri</title>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="/assets/img/logo/logo-bjpm.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/logo/logo-bjpm.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -175,7 +175,8 @@
                     layanan dan produk berkualitas, PT. Bina Jaya Perkasa Mandiri siap mendukung pembangunan Indonesia
                     yang berkelanjutan.
                 </p>
-                <button class="p-3 py-1 mt-3 text-white bg-main">Selengkapnya</button>
+                <button
+                    class="p-3 py-1 mt-3 text-white bg-main border-2 border-white hover:text-main hover:bg-white hover:border-2 hover:border-main">Selengkapnya</button>
             </div>
             <img src="./assets/img/About.png" alt="" class="max-w-[400px] w-[100%] p-4 md:order-2 order-1"
                 data-aos="slide-up">
@@ -219,7 +220,8 @@
                     </div>
                 </div>
             </div>
-            <button class="mx-auto bg-main text-white px-3 text-[13px] p-1  md:mb-0 mb-5">
+            <button
+                class="mx-auto text-white bg-main border-2 border-white hover:text-main hover:bg-white hover:border-2 hover:border-main px-3 text-[13px] p-1  md:mb-0 mb-5">
                 Selanjutnya
             </button>
         </section>
@@ -251,7 +253,8 @@
                     <img src="./assets/img/project/3.jpg" alt="" class="object-cover w-full h-full">
                 </div>
             </div>
-            <button class="bg-main mx-auto text-white p-3 py-1 text-[13px]">Selengkapnya</button>
+            <button
+                class="bg-main mx-auto text-white bg-main border-2 border-white hover:text-main hover:bg-white hover:border-2 hover:border-main p-3 py-1 text-[13px]">Selengkapnya</button>
         </section>
         <section id="article" class="p-10 px-5 text-white bg-main">
             <h1 class="text-[32px] mb-6 font-bold">Artikel</h1>
@@ -259,35 +262,59 @@
                 <div class="article-card" data-aos="zoom-in">
                     <img src="./assets/img/Blank.jpg" alt="">
                     <p class="flex flex-wrap bg-white">
-                        <span>Penyedia Layanan Terbaik</span>
-                        <button class="ms-auto">Baca Lebih</button>
+                        <span class="text-sm text-gray-500 mb-0">
+                            Selasa, 12 Oktober 2023
+                        </span>
+                        <span class="text-normal font-bold">Penyedia Layanan Terbaik</span>
+                        <button class="ms-auto">
+                            Baca Lebih <i class="bi bi-arrow-right"></i>
+                        </button>
+
                     </p>
                 </div>
                 <div class="article-card" data-aos="zoom-in">
                     <img src="./assets/img/Blank.jpg" alt="">
                     <p class="flex flex-wrap bg-white">
-                        <span>Penyedia Layanan Terbaik</span>
-                        <button class="ms-auto">Baca Lebih</button>
+                        <span class="text-sm text-gray-500 mb-0">
+                            Selasa, 12 Oktober 2023
+                        </span>
+                        <span class="text-normal font-bold">Penyedia Layanan Terbaik</span>
+                        <button class="ms-auto">
+                            Baca Lebih <i class="bi bi-arrow-right"></i>
+                        </button>
+
                     </p>
                 </div>
                 <div class="article-card" data-aos="zoom-in">
                     <img src="./assets/img/Blank.jpg" alt="">
                     <p class="flex flex-wrap bg-white">
-                        <span>Penyedia Layanan Terbaik</span>
-                        <button class="ms-auto">Baca Lebih</button>
+                        <span class="text-sm text-gray-500 mb-0">
+                            Selasa, 12 Oktober 2023
+                        </span>
+                        <span class="text-normal font-bold">Penyedia Layanan Terbaik</span>
+                        <button class="ms-auto">
+                            Baca Lebih <i class="bi bi-arrow-right "></i>
+                        </button>
+
                     </p>
                 </div>
                 <div class="article-card" data-aos="zoom-in">
                     <img src="./assets/img/Blank.jpg" alt="">
                     <p class="flex flex-wrap bg-white">
-                        <span>Penyedia Layanan Terbaik</span>
-                        <button class="ms-auto">Baca Lebih</button>
+                        <span class="text-sm text-gray-500 mb-0">
+                            Selasa, 12 Oktober 2023
+                        </span>
+                        <span class="text-normal font-bold">Penyedia Layanan Terbaik</span>
+                        <button class="ms-auto">
+                            Baca Lebih <i class="bi bi-arrow-right"></i>
+                        </button>
+
                     </p>
                 </div>
             </div>
         </section>
         <section id="video" class="flex p-10">
-            <div class="aspect-[1.59/1] md:w-[80%] w-full md:max-w-[950px] md:max-h-[600px] relative m-auto"
+            <div class="aspect-[1.59/1] md:w-[80%] w-full md:max-w-[950px] md:max-h-[450px] relative m-auto"
                 data-aos="zoom-in">
                 <iframe id="demo-video" class="w-full h-full opacity-0"
                     src="https://www.youtube.com/embed/co9VMK17oSs?enablejsapi=1&si=IkSLYARZ3IC_2RlJ"
@@ -337,7 +364,7 @@
             </div>
             <div class="w-[47%] md:order-6 order-7">
                 <h3 class="text-white hover:text-black mb-4">Client Kami</h3>
-                <div class="flex flex-wrap">
+                <div class="flex flex-wrap gap-4">
                     <img src="./assets/img/logo/c1.png" alt="" class="min-h-[32px] flex-shrink-1 h-full max-h-[70px]">
                     <img src="./assets/img/logo/c2.png" alt="" class="min-h-[32px] flex-shrink-1 h-full max-h-[70px]">
                 </div>
